fixed images on the wound care page and hbot page causing overflow issues on mobile

--- a/src/index2.css
+++ b/src/index2.css
@@ -446,7 +446,6 @@ main {
 
 .hbotAd {
   display: flex;
-  flex-direction: row;
   flex: 1;
   background-color: rgba(5, 104, 101, 0.15);
   max-height: calc(55 * var(--rem));
@@ -490,10 +489,14 @@ main {
   display: flex;
   flex: 1;
   justify-content: left;
+  align-items: center;
+  /* width: 100%; */
 }
 
 .hbotAd .image img {
   height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 /* ****** HBOT page ******* */
@@ -512,28 +515,47 @@ main {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  /* border: 2px solid green; */
 }
 
-.rowSection img {
+.hbotImage {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid orange; */
+}
+
+.hbotImage img {
+  /* height: calc(20 * var(--rem)); */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  box-shadow: 2px 2px 8px #02211f;
+  border: 1px solid var(--darkest-green);
+}
+
+/* .rowSection img {
   height: calc(20 * var(--rem));
   object-fit: cover;
   box-shadow: 2px 2px 8px #02211f;
-  border: 2px solid var(--darkest-green);
-}
+  border: 1px solid var(--darkest-green);
+} */
 
 .rowSection .rowText {
   display: flex;
-  flex: 1;
+  flex: 2;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* border: 2px solid purple; */
 }
 
 .rowSection p {
   font-size: calc(1.5 * var(--rem));
   font-family: "Noto Serif", serif;
   padding: var(--rem) calc(1.5 * var(--rem));
-  text-align: center;
+  text-align: justify;
 }
 
 .desc.hbot {
@@ -1348,7 +1370,7 @@ main {
 
     .text {
       padding: calc(1.5 * var(--rem)) 0;
-      flex: 1;
+      /* flex: 1; */
       height: 100%;
     }
 
@@ -1358,7 +1380,7 @@ main {
     }
 
     .image img {
-      height: calc(20 * var(--rem));
+      /* height: calc(20 * var(--rem)); */
     }
   }
 
